Fix input field spacing

--- a/style.css
+++ b/style.css
@@ -75,5 +75,8 @@ label {
 
 .inputs div {
     margin-top: 1rem;
+}
+
+.left {
     margin-left: 3rem;
 }
